[project]
name = "poseidon-aqms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135",
    "pandas>=2.2",
    "plotly>=6.0",
    "pyarrow>=18.0",
    "pydantic>=2.12",
    "uvicorn[standard]>=0.42",
]

[dependency-groups]
dev = [
    "httpx>=0.28",
    "mypy>=1.13",
    "pytest>=9.0",
    "pytest-cov>=6.0",
    "ruff>=0.8",
]
[tool.pytest.ini_options]
pythonpath = [
  "src"
]